--- a/interfaces/menu.ui
+++ b/interfaces/menu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1151</width>
-    <height>874</height>
+    <width>1191</width>
+    <height>876</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -778,7 +778,7 @@ background-color:rgb(145, 200, 228);
                  </property>
                  <property name="icon">
                   <iconset>
-                   <normaloff>ELEMENTOS GRAFICOS/cesar.jpg</normaloff>ELEMENTOS GRAFICOS/cesar.jpg</iconset>
+                   <normaloff>ELEMENTOS GRAFICOS/cash-register.png</normaloff>ELEMENTOS GRAFICOS/cash-register.png</iconset>
                  </property>
                  <property name="iconSize">
                   <size>
@@ -861,11 +861,14 @@ border-radius:10px;
               <property name="autoFillBackground">
                <bool>false</bool>
               </property>
+              <property name="styleSheet">
+               <string notr="true">background-color:rgb(145, 200, 228);</string>
+              </property>
               <property name="tabPosition">
                <enum>QTabWidget::North</enum>
               </property>
               <property name="currentIndex">
-               <number>0</number>
+               <number>1</number>
               </property>
               <property name="usesScrollButtons">
                <bool>true</bool>
@@ -936,15 +939,30 @@ QFrame{
                      </property>
                      <property name="maximumSize">
                       <size>
-                       <width>625</width>
-                       <height>200</height>
+                       <width>1000</width>
+                       <height>500</height>
                       </size>
                      </property>
+                     <property name="styleSheet">
+                      <string notr="true">QLabel:hover{
+	border:2px solid rgb(145, 200, 228);
+	border-radius:100%;
+}</string>
+                     </property>
                      <property name="text">
-                      <string>Logo del consultorio</string>
+                      <string/>
+                     </property>
+                     <property name="pixmap">
+                      <pixmap>ELEMENTOS GRAFICOS/_b42554de-1e95-47e5-b3fe-abc4cd3e47b5-removebg-preview.png</pixmap>
+                     </property>
+                     <property name="scaledContents">
+                      <bool>true</bool>
                      </property>
                      <property name="alignment">
                       <set>Qt::AlignCenter</set>
+                     </property>
+                     <property name="wordWrap">
+                      <bool>false</bool>
                      </property>
                     </widget>
                    </item>
@@ -956,7 +974,7 @@ QFrame{
                      <property name="sizeHint" stdset="0">
                       <size>
                        <width>20</width>
-                       <height>213</height>
+                       <height>50</height>
                       </size>
                      </property>
                     </spacer>
@@ -1004,14 +1022,14 @@ background-color:white;
                           <item>
                            <widget class="QLabel" name="label_4">
                             <property name="text">
-                             <string>Direccion</string>
+                             <string>Dirección</string>
                             </property>
                            </widget>
                           </item>
                           <item>
                            <widget class="QLabel" name="label_12">
                             <property name="text">
-                             <string>Direccion</string>
+                             <string>Puerto La Cruz</string>
                             </property>
                            </widget>
                           </item>
@@ -1042,7 +1060,7 @@ background-color:white;
                           <item>
                            <widget class="QLabel" name="label_13">
                             <property name="text">
-                             <string>Numero de contacto</string>
+                             <string>0000-0000-000</string>
                             </property>
                            </widget>
                           </item>
@@ -1204,6 +1222,17 @@ color:white;
                          <height>40</height>
                         </size>
                        </property>
+                       <property name="styleSheet">
+                        <string notr="true">QLineEdit{
+background-color:white;
+}
+QLineEdit:focus{
+  
+border-bottom:5px solid :rgb(145, 200, 228);
+border-right:5px solid :rgb(145, 200, 228);
+
+}</string>
+                       </property>
                        <property name="inputMask">
                         <string/>
                        </property>
@@ -1350,6 +1379,12 @@ color:white;
                           <italic>false</italic>
                           <bold>false</bold>
                          </font>
+                        </property>
+                        <property name="styleSheet">
+                         <string notr="true"/>
+                        </property>
+                        <property name="gridStyle">
+                         <enum>Qt::SolidLine</enum>
                         </property>
                         <attribute name="horizontalHeaderDefaultSectionSize">
                          <number>237</number>
