--- a/interfaces/salida.ui
+++ b/interfaces/salida.ui
@@ -209,7 +209,7 @@ QPushButton:hover{
                      <enum>QFrame::WinPanel</enum>
                     </property>
                     <property name="currentIndex">
-                     <number>0</number>
+                     <number>1</number>
                     </property>
                     <widget class="QWidget" name="page">
                      <property name="styleSheet">
@@ -2076,6 +2076,49 @@ border-top:2px solid rgb(0,0,0);
                                </property>
                               </spacer>
                              </item>
+                             <item>
+                              <widget class="QPushButton" name="btn_xd">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>150</width>
+                                 <height>50</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>150</width>
+                                 <height>50</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <pointsize>10</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string>Cambiar</string>
+                               </property>
+                               <property name="iconSize">
+                                <size>
+                                 <width>25</width>
+                                 <height>25</height>
+                                </size>
+                               </property>
+                              </widget>
+                             </item>
+                             <item>
+                              <spacer name="verticalSpacer_10">
+                               <property name="orientation">
+                                <enum>Qt::Vertical</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>20</width>
+                                 <height>40</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
                             </layout>
                            </item>
                           </layout>
@@ -2134,6 +2177,11 @@ border-top:2px solid rgb(0,0,0);
             </widget>
            </item>
           </layout>
+         </widget>
+         <widget class="QWidget" name="tab">
+          <attribute name="title">
+           <string>Página</string>
+          </attribute>
          </widget>
         </widget>
        </item>
