--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -331,13 +331,13 @@ QRadioButton{
                  <widget class="QPushButton" name="bt_backup">
                   <property name="minimumSize">
                    <size>
-                    <width>150</width>
+                    <width>200</width>
                     <height>50</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>150</width>
+                    <width>200</width>
                     <height>50</height>
                    </size>
                   </property>
@@ -347,7 +347,7 @@ QRadioButton{
                    </font>
                   </property>
                   <property name="text">
-                   <string>Respaldar BDD</string>
+                   <string>Respaldar información</string>
                   </property>
                   <property name="icon">
                    <iconset>
